tests/ppapi_browser/bad/ppapi_bad_ppp_instance_didcreate.nmf
{
  "program": {
    "x86-32": {"url": "ppapi_bad_ppp_instance_didcreate_x86-32.nexe"},
    "x86-64": {"url": "ppapi_bad_ppp_instance_didcreate_x86-64.nexe"},
    "arm": {"url": "ppapi_bad_ppp_instance_didcreate_arm.nexe"}
  }
}
